<resources>
    <string name="label_task_title">Title</string>
    <string name="label_task_description">Description</string>
    <string name="label_task_doc">Date of Completion</string>
    <string name="label_task_save">Save</string>
    <string name="label_hint_date">dd/MM/yyyy</string>

    <string name="description_add_task">Add Task</string>

    <string name="sample_task_description">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
    </string>
    <string name="title_empty_task">Empty Tasks!</string>
    <string name="description_empty_task">You have no tasks at the moment</string>
    <string name="option_pin_item">Pin Item</string>
    <string name="option_unpin_item">Unpin Item</string>
    <string name="option_delete">Delete</string>
    <string name="message_task_saved">Task has been saved</string>
    <string name="message_error_saving_task">There was issue saving task, Please try again!</string>
    <string name="message_error_title_empty">The title must not be empty</string>
    <string name="message_error_data_empty">The date must not be empty</string>
    <string name="message_error_date_limit">The date must not be earlier than current date</string>
    <string name="message_task_not_found">Task cannot be found</string>
    <string name="message_error_loading_data">There was an error in loading the data</string>
    <string name="message_task_deleted">The task is deleted</string>
    <string name="message_error_deleting_task">There was an error in deleting the data</string>
    <string name="message_task_pinned">The task is pinned</string>
    <string name="message_error_pinning_task">There was an error in pinning the task</string>
    <string name="message_task_unpinned">The task is unpinned</string>
    <string name="message_error_unpinning_task">There was an error in unpinning the task</string>
</resources>